# RenCamera

./: .gitignore  HDR_PROCESSING_FLOW.md  XiaomiPocoX7Pro_IMX882_0_noise - Álvaro Recoba García.c  compile_generators.sh  settings.gradle.kts
.agents/: agents.md
.agents/skills/: build_gcam_engine.md
app/: build.gradle.kts
app/src/androidTest/java/com/renskylab/camera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  debug_utils.h  frame_context.h  gcam_core.cpp  gl_helpers.h  pipeline.cpp  pipeline.h  shader_loader.h
app/src/main/cpp/halide_generated/: HalideBuffer.h  temporal_fusion.h
app/src/main/cpp/shaders/: adaptive_tonemap.comp  nlm_denoise.comp  post_tonemap_denoise.comp  sabre_debayer.comp
app/src/main/cpp/stages/: align_stage.cpp  align_stage.h  debayer_stage.cpp  debayer_stage.h  defect_pixel_stage.cpp  defect_pixel_stage.h  encode_stage.cpp  encode_stage.h  fusion_stage.cpp  fusion_stage.h  tonemap_stage.cpp  tonemap_stage.h
app/src/main/java/com/renskylab/camera/: CameraController.kt  CameraViewModel.kt  FrameRingBuffer.kt  ImageSegmenterHelper.kt  LumaHistogramAnalyzer.kt  MainActivity.kt  NativeEngine.kt  PhotoSaver.kt  PipelineConfig.kt  ProcessingManager.kt  ProcessingService.kt
app/src/main/java/com/renskylab/camera/ui/: RenCameraApp.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/renskylab/camera/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
